tests/neg-custom-args/captures/vars.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:11:24 -----------------------------------------
11 |  val z2c: () -> Unit = z2  // error
   |                        ^^
   |                        Found:    (z2 : {x, cap1} () -> Unit)
   |                        Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/vars.scala:13:6 ---------------------------------------------------------------
13 |  var a: String => String = f // error
   |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |  The mutable variable's type box {*} String -> String is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- Error: tests/neg-custom-args/captures/vars.scala:15:4 ---------------------------------------------------------------
15 |  b.head // error
   |  ^^^^^^
   |  The expression's type box {*} String -> String is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/vars.scala:21:13 -----------------------------------------
21 |    b = List(g) // error !!! Probably spurious due to box comparison
   |             ^
   |             Found:    Seq[{cap3} String -> ? String]
   |             Required: Seq[box {cap3} (x$0: ? String) -> ? String]
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/vars.scala:30:8 ---------------------------------------------------------------
30 |  local { cap3 => // error
   |  ^
   |  The expression's type box {*} (x$0: ? String) -> ? String is not allowed to capture the root capability `*`.
   |  This usually means that a capability persists longer than its allowed lifetime.
31 |    def g(x: String): String = if cap3 == cap3 then "" else "a"
32 |    g
33 |  }
